--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,4 @@
-<!-- CV _sept19_ FIX.04.09.19  -->
-
+<!-- CV _Nov19_ FIX.24.10.19  -->
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -161,17 +160,9 @@ He is self-confident, smart and very helpful and I believe that he will surpass 
 <span class="w3-right w3-opacity">Work Experience <i class="fa fa-suitcase"></i></span>
 <h4>ΕΜΠΕΙΡΙΑ</h4>
 <hr class="w3-clear"><!-- --------------------- -->
-<h5 class="w3-opacity"><b> smartsystems | </b> Research and Development Engineer</h5>
-<span class="w3-tag w3-small w3-red">internship</span>
-<span class="w3-tag w3-small w3-theme-d5"><i class="fa fa-calendar fa-fw w3-margin-right"></i>9/2019 - 3/2020</span>
-     <span class="w3-tag w3-small w3-theme-d2"><i class="fa fa-pencil-square-o fa-fw w3-margin-right w3-large "></i><a href="" style="text-decoration:none;">Doc</a></span>
-	<span class="w3-tag w3-small w3-theme-l3"><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large "></i><a href="" style="text-decoration:none;">είπαν</a></span>         
-<p>Η συγκεκριμένη ενότητα θα είναι σύντομα διαθέσιμη.</p>
-<hr class="w3-clear"><!-- --------------------- -->
 <h5 class="w3-opacity"><b> Vodafone | </b> 1st Level Technical Support Representative</h5>
     <span class="w3-tag w3-small w3-theme-d5"><i class="fa fa-calendar fa-fw w3-margin-right"></i>10/2017 - 8/2019</span>
-     <span class="w3-tag w3-small w3-theme-d2">--</span>
-	<span class="w3-tag w3-small w3-theme-l3"><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large "></i><a href="" style="text-decoration:none;">είπαν</a></span>
+<span class="w3-tag w3-small w3-red">internship 11/2019 - x/2020</span>	
 <p>Για σχεδόν δύο χρόνια εργάστηκα για την Vodafone ως τεχνικός πρώτου επιπέδου για συνδρομητές σταθερής τηλεφωνίας και xDSL internet.
  <span id="dots">...</span><span id="more"> Διαχείριση σε περισσότερα απο 40 τεχνικά ζητήματα την μέρα, με FTF στα περισσότερα απο αυτά. Σε αυτή τη θέση είμαι υπεύθυνος για διαχείριση τεχνικών προβλημάτων πελατών σταθερής τηλεφωνίας, IPTV και internet, αλλά και ενημέρωση για εκκρεμότητες ανοιχτών υποθέσεων σε διαδικασία επίλυσης.
 Στη θέση αυτή έχω την ευκαιρία να εξελίξω τις τεχνικές μου γνώσεις σταθερής τηλεφωνίας και παραμετροποίησης εξοπλισμών internet, να αποκτήσω εμπειρία και εξοικείωση σε τηλεφωνική εξυπηρέτηση, επικοινωνία και διαπροσωπικές σχέσεις.</span></p>
@@ -195,12 +186,19 @@ Read more</span>
 <h4>ΣΠΟΥΔΕΣ</h4><hr class="w3-clear">
           
 <h5 class="w3-opacity"><b> Piraeus University of Applied Sciences<br>Department of Automation Engineering</b></h5>
- <span class="w3-tag w3-small w3-theme-d5"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2011 - Today</span>
+<a href="https://www.uniwa.gr/" style="text-decoration:none;">
+<span class="w3-tag w3-small w3-theme-l3">link</span></a>
+<a href="http://www.idpe.uniwa.gr/" style="text-decoration:none;">
+<span class="w3-tag w3-small w3-theme-l3">link</span></a>
+<span class="w3-tag w3-small w3-theme-d5"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2011 - Today</span>
           <p>Τελειόφοιτος φοιτητής του τμήματος Μηχανικών Αυτοματισμού Τ.Τ.  της Σχολής Τεχνολογικών Εφαρμογών στο Α.Ε.Ι. Πειραιά Τεχνολογικού Τομέα.</p>
           <hr>
           
   <h5 class="w3-opacity"><b> Tech High School of Zwgrafou
+ 
 <br> Computer Science 18</b></h5>
+<a href="http://1epal-zograf.att.sch.gr/" style="text-decoration:none;">
+<span class="w3-tag w3-small w3-theme-l3">link</span></a>
  <span class="w3-tag w3-small w3-theme-d5"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2011</span><p> Απολυτήριο 1oυ Επαγγελματικού Λυκείου Ζωγράφου, τομέας Πληροφορικής με βαθμό: 18/20 και κάτοχος Πτυχίου Πληροφορικής: Υποστήριξη Συστημάτων, Εφαρμογών και Δικτύων Υπολογιστών, με βαθμό: 18,8/20. </p>       
 </div>  
       <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
