--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.10.09.19
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.01.11.19
 <!--
 CC-BY:		Alexandros S. Papaspyrou
 URL:		https://alexandroshub.github.io
@@ -185,8 +184,12 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 <span class="w3-large w3-hide-small" style="background-color: #0033669C; color: #FF5733; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία.</span>
     <p><a href="https://alexandroshub.github.io/plus" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> TECH  
     <font color="#FF5733"><i class="fa fa-plus"></i> PLUS</font>
+        </b></a>
+        <a href="https://alexandroshub.github.io/xmas" class="w3-button w3-red w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-green"><b> XMAS <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css">
+  <font color="#FF5733"><i class="fas fa-sleigh"></i></font> -->
         </b></a></p>
-  </div> 
+      </div> 
+  
  <span class="w3-hide-small">  
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
  
