--- a/plus.html
+++ b/plus.html
@@ -1,4 +1,5 @@
 
+
 <!--
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -7,7 +8,7 @@
 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 21/4/2019-->
+Last Update: 11/11/2019-->
 
 <!DOCTYPE html>
 <html>
@@ -60,6 +61,11 @@ body, html {height: 100%}
   </div>
 <div class="w3-display-topright w3-container w3-xlarge">
 <p><a href="https://alexandroshub.github.io/next.html" class="w3-bar-item w3-black w3-button w3-wide"><i class="fa fa-arrow-right"></i></a>
+<br><br>
+<a href="https://robodayblog.wordpress.com/" class="w3-bar-item w3-black w3-button w3-wide">W</a>
+
+<a href="https://roboday.tumblr.com/" class="w3-bar-item w3-black w3-button w3-wide">t</a>
+
 </div>
 <div class="w3-display-topleft w3-container w3-xlarge">
 
