--- a/cv.html
+++ b/cv.html
@@ -1,4 +1,4 @@
-<!-- CV _Nov19_ FIX.24.10.19  -->
+<!-- CV _Nov19_ FIX.01.11.19  -->
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -41,7 +41,6 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
   logged_out_greeting="Hi! How can i help you?">
 </div>
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
-
 <!-- Navbar -->
 <div class="w3-top">
  <div class="w3-bar  w3-large" style="max-width:100%;margin:auto; background:#0033668C">
@@ -61,21 +60,19 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
          <h4 class="w3-center">Papaspyrou Alexandros</h4>
          <p class="w3-center">
          <img class="w3-round" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="height:166px;width:166px" alt="imgPapaspyrou">   
-</p><hr>
+</p>
+<div class="w3-row">
+<div class="w3-half"><a class="w3-button w3-block w3-theme-d5 w3-section" title="Download" href="http://goo.gl/FxkYxg"><i class="fa fa-cloud-download w3-margin-right w3-large"></i></a></div>
+<div class="w3-half"><a class="w3-button w3-block w3-theme w3-section" title="Linkedin" href="https://www.linkedin.com/in/alexandrospapaspyrou"><i class="fa fa-linkedin fa-fw w3-margin-right w3-large"></i></a></div> 
+</div>    
 
-<p><a href="http://goo.gl/FxkYxg"  style="text-decoration: none" title="Linkedin"><button class="w3-button w3-block w3-theme"><i class="fa fa-cloud-download w3-margin-right w3-large"></i>Download</button></a></p>
- 
-<p><a href="https://www.linkedin.com/in/alexandrospapaspyrou"  style="text-decoration: none" title="Linkedin"><button class="w3-button w3-block w3-theme"><i class="fa fa-linkedin fa-fw w3-margin-right w3-large"></i>Linkedin</button></a></p>
-<p><a href="https://alexandroshub.github.io/portfolio.html"  style="text-decoration: none" title="Portfolio"><button class="w3-button w3-block w3-theme-l4"><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"></i>Portfolio</button></a></p>
 <div class="w3-row w3-opacity">
 <div class="w3-third"><a class="w3-button w3-block w3-green w3-section" title="Call Me" href="tel:+306949452023"> <i class="fa fa-phone"></i></a></div>
 <div class="w3-third"><a class="w3-button w3-block w3-blue w3-section" title="Sent me Message" href="http://fb.me/msg/papaspyrou.alexandros"><i class="fa fa-comments-o"></i></a></div> 
 <div class="w3-third"><a class="w3-button w3-block w3-red w3-section" title="Sent me Email" href="mailto:alexispapy@gmail.com?Subject=Web%20Email" target="_top"><i class="fa fa-envelope"></i></a></div>
 </div>        
 </div>
-</div>
-<br>
-      
+</div><br>
 <!-- MENU II -->
 <div class="w3-card w3-round">
 <div class="w3-white">
@@ -255,6 +252,21 @@ Read more</span>
         <div class="w3-container">
 <!--Videos Section ////////////////////////////////////////////////////////// -->
 <b>Videos</b>
+
+  <!-- Main video --><p>
+<iframe id="YourID" name="video_feature" width="75%" height="200" src="https://www.youtube.com/embed/uVIjsjr_GVE" frameborder="0"></iframe>
+<!-- Other videos --><br>
+<span class="w3-tag w3-small w3-light-gray"><a id="video_two" href="https://www.youtube.com/embed/fkQYsenF0og" target="video_feature"><b> LDR switch
+</b></a></span>
+<span class="w3-tag w3-small w3-gray"><a id="video_two" href="https://www.youtube.com/embed/KKg15xo4_SA" target="video_feature"><b> W3 University  </b></a></span>
+	<span class="w3-tag w3-small w3-light-grey"><a id="video_two" href="https://www.youtube.com/embed/8h8Oq1GO-1o" target="video_feature"><b> LabView LoggerIV Project </b></a></span>
+	<span class="w3-tag w3-small w3-gray"> 
+<a id="video_one" href="https://www.youtube.com/embed/uVIjsjr_GVE" target="video_feature"><b>Michatron</b></a></span>
+	<span class="w3-tag w3-small w3-light-grey"> 
+<a id="video_two" href="https://www.youtube.com/embed/dwVID5os1g0" target="video_feature"><b>ATMEGA 328</b></a></span>
+	<span class="w3-tag w3-small w3-gray"> 
+<a id="video_two" href="https://www.youtube.com/embed/takpmt5s5Ho" target="video_feature"><b>PLC - Ταινία Μεταφοράς</b></a></span>
+<br></p>
 <!-- END videos ///////////////////////////////////////////////////////// -->       
         <div class="w3-row w3-opacity">
            </div>
@@ -264,6 +276,7 @@ Read more</span>
   <div class="w3-card w3-round w3-white w3-center">
         <div class="w3-container">
 <!--Portfolio Section ////////////////////////////////////////////////////////// --><b>Portfolio</b>
+<p><a href="https://alexandroshub.github.io/portfolio.html"  style="text-decoration: none" title="Portfolio"><button class="w3-button w3-block w3-theme-l4"><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"></i>Portfolio</button></a></p>
  <!-- END Portfolio ///////////////////////////////////////////////////////// -->       
         <div class="w3-row w3-opacity">
            
