--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-
-
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.10.09.19
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.04.01.20
 <!--
 CC-BY:		Alexandros S. Papaspyrou
 URL:		https://alexandroshub.github.io
@@ -31,7 +29,7 @@ body, html { height: 100%; line-height: 1.8;}
 /* Full height image header */
 .bgimg-1 {
     background-position: center; background-size: cover;
-    background-image: url("https://66.media.tumblr.com/e275be333ccf5abfb80f288abece4434/tumblr_oz7c9bifSb1si59zfo10_1280.png");
+    background-image: url("https://cdn.pixabay.com/photo/2017/05/07/00/04/twilight-2291361_960_720.jpg");
     min-height: 100%;
 }
 .w3-bar .w3-button { padding: 16px;}
@@ -115,6 +113,7 @@ function closeNav() {
 <div class="w3-top"><div id="myNavbar" style="max-width:100%;margin:auto;">
 <!-- menu --><div class="w3-button w3-padding-16 w3-left w3-hover-black" onclick="w3_open()"><b><font color="orange"><i class="fa fa-bars"></i></font></b></div>
 <!-- contact --><a href="https://alexandroshub.github.io/contact.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="orange"><i class="fa fa-envelope"></i></font></b></a>
+<!-- me --><a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="orange"><i class="fa fa-user"></i></font></b></a>
 <!-- files --><a href="https://alexandroshub.github.io/portfolio.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="orange"><i class="fa fa-th"></i></font></b></a>
 <!-- logo --><div class="w3-padding-16">
 <img src="https://66.media.tumblr.com/4274e751a7e37a44163346c2f5a85e7d/tumblr_pxnn87AzrB1si59zfo1_540.png" style="width:150px;"> 
@@ -187,9 +186,7 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
     <p><a href="https://alexandroshub.github.io/plus" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> TECH  
     <font color="#FF5733"><i class="fa fa-plus"></i> PLUS</font>
         </b></a>
-        <a href="https://alexandroshub.github.io/xmas" class="w3-button w3-red w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-green"><b> XMAS <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css">
-  <font color="#FF5733"><i class="fas fa-sleigh"></i></font> -->
-        </b></a></p>
+      </p>
       </div> 
   
  <span class="w3-hide-small">  
@@ -315,8 +312,8 @@ Files & Publications</div>
 </div></div>
 
 </div>
-<center><p><a href="https://alexandroshub.github.io/portfolio.html#projects" class="w3-button w3-orange "><i class="fa fa-th"> </i> More  Projects</a></p></center>
-</div>
+<center><p><a href="https://alexandroshub.github.io/portfolio.html#projects" class="w3-button w3-orange "><i class="fa fa-th"> </i> More  Projects</a></p></center>    </div>
+
 <!-- 
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
@@ -336,7 +333,7 @@ Files & Publications</div>
        <h3>Share</h3><!-- Go to www.addthis.com/dashboard to customize your tools -->
        <div class="addthis_inline_share_toolbox"></div>
        <h3>About</h3>         
-       <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a>
+       
   </div>
   
     <div class="w3-third">
@@ -373,10 +370,16 @@ Files & Publications</div>
     </div>
   </div>
 </footer>
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
-<!-- top --><a href="#home" class="w3-button w3-hover-orange"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>   |   
-<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:300px;" alt="Signature" align="bottom">
+
+<!-- Footer --> 
+<footer class="w3-center">
+<div style="background-color: #e7e7e7"><center>
+  <h1 style="color: #565A5C">Alexandros Hub</h1>
+  <!-- top --><a href="#home" class="w3-button w3-hover-orange"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a> 
+  <section class="copyright">
+<font color="#565a5c" size="12px"><style>div.a {font-size: 12px;}</style><div class="a"><p>© 2020 Alexandros Hub  All rights reserved.<a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a></p></div></font></section>
+</center>
+</div>
 </footer>
 <script>// Modal Image Gallery
 function onClick(element) {
