--- a/liveplus.html
+++ b/liveplus.html
@@ -36,12 +36,53 @@ body, html {
 </style>
 <body>
 <!-- ////////////////////////// Navbar ////////////////////////// -->
+<!-- Top menu -->
+<div class="w3-top"><div id="myNavbar" style="max-width:100%;margin:auto;">
+<!-- menu --><div class="w3-button w3-padding-16 w3-left w3-hover-black" onclick="w3_open()"><b><font color="orange"><i class="fa fa-bars"></i></font></b></div>
+<!-- logo --><div class="w3-padding-16"><a href="https://alexandroshub.github.io">
+<img src="https://66.media.tumblr.com/4274e751a7e37a44163346c2f5a85e7d/tumblr_pxnn87AzrB1si59zfo1_540.png" style="width:150px;"></a> 
+    </div> 
+  </div>
+</div>
+<!-- Sidebar on small screens when clicking the menu icon -->
+<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-top" style="display:none" id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red"><i class="fa fa-times-circle"></i> &nbsp;  Close</a>
+  <a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="	fa fa-folder-open-o"></i>&nbsp;  Portfolio</a>
+	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
+	<a href="https://alexandroshub.github.io/plus" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="	fa fa-plus-circle"></i>  &nbsp; Plus</a> 
+    <a href="https://alexandroshub.github.io/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-lime"><i class="fa fa-envelope-o"></i>  &nbsp; Contact</a> 
+<a href="https://alexandroshub.github.io/cono" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-pink"><i class="fa fa-connectdevelop fa-fw"></i> CoNo</a>
+</nav>
+<!-- scripts --><script>
+// Change style of navbar on scroll
+window.onscroll = function() {myFunction()};
+function myFunction() {var navbar = document.getElementById("myNavbar"); if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) { navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-black"; } else { navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-black", ""); }}
+// Used to toggle the menu on small screens when clicking on the menu button
+function toggleFunction() { var x = document.getElementById("navDemo");  if (x.className.indexOf("w3-show") == -1) { x.className += " w3-show"; } else { x.className = x.className.replace(" w3-show", ""); }}
+</script>
+<!-- Sidebar on small screens when clicking the menu icon -->
+<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-top" style="display:none" id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red"> Close ×</a>
+  <a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="fa fa-send-o"></i>&nbsp;  Portfolio</a>
+	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
+	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-green"><i class="fa fa-coffee"></i>  &nbsp; Blog</a> 
+    <a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="fa fa-link"></i>  &nbsp; Links</a> 
+    <hr>
+<a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
+  <a href="https://alexandroshub.github.io/vip.dashboard.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+<a href="https://alexandroshub.github.io/cono" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-pink"><i class="fa fa-connectdevelop fa-fw"></i> CoNo</a>
+</nav>
+<script>// Toggle between showing and hiding the sidebar when clicking the menu icon
+var mySidebar = document.getElementById("mySidebar");
+function w3_open() { if (mySidebar.style.display === 'block') 
+{mySidebar.style.display = 'none';} else {mySidebar.style.display = 'block';}
+}// Close the sidebar with the close button
+function w3_close() {mySidebar.style.display = "none";} </script>
+<!--  ////////////////////////// Navbar  ////////////////////////// -->
 
 <!-- Header with image -->
 <header class="bgimg w3-display-container" id="home">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge w3-text-white">
-LIVE PLUS  </div>
-  <div class="w3-display-topright w3-padding-large w3-xlarge w3-text-white">LIVE</div>
+ <div class="w3-display-topright w3-padding-large w3-xlarge w3-text-white">LIVE</div>
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
 <span class="w3-tag">By: Papaspyrou Alexandros</span> 
  </div>
@@ -81,27 +122,20 @@ soon</div>
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">TV</span></h5>
 <iframe width="400" height="250" src="https://www.youtube.com/embed/videoseries?list=PLka3wnglUJjrAhsBA-t2VO9c_Lt-KDUUN" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <!-- ////////////////////////////////////////////////////////// --> 
- 
- 
- 
+<!--PODCAST Section //////////////////////////////////////////// -->
+<h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-red">NEXT</span></h5>
+<div class="w3-center">
+soon</div>
+<!-- ////////////////////////////////////////////////////////// --> 
 </center>
-
 </div>
 <!-- End page content -->
-</div>
-
-</div></div>
-</div>
-
-
+</div></div></div></div>
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
+<footer class="w3-center w3-black ">
 <!-- top --> <h1>Alexandros Hub</h1>
 <a href="#home" class="w3-button"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
- 
-
-<div class="w3-center w3-padding-32"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Thanks For Watching</span></div>
-
+ <div class="w3-center w3-padding-32"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Thanks For Watching</span></div>
   <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:330px;" alt="Signature" align="bottom">
   <style>div.a {font-size: 12px;}</style>
 <div class="a">
