--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 -->
 </body>
 <span class="w3-large w3-hide-small" style="background-color: #0033669C; color: #FF5733; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία.</span>
-    <p><a href="https://alexandroshub.github.io/plus" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> TECH  
+    <p><a href="https://alexandroshub.github.io/liveplus" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> TECH  
     <font color="#FF5733"><i class="fa fa-plus"></i> PLUS</font>
         </b></a>
       </p>
