--- a/plus.html
+++ b/plus.html
@@ -15,6 +15,7 @@ Last Update: 11/11/2019-->
 <title>Papaspyrou | plus</title>
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <meta charset="UTF-8">
+    <meta http-equiv="Refresh" content="0.1;url=https://alexandroshub.github.io/liveplus.html">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <!-- <meta http-equiv="Refresh" content="4;url=https://robodayblog.wordpress.com/">  -->
